src/objects/cnotify__Notify_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>cnotify__Account_Email_Field__c</fullName>
        <defaultValue>&quot;Email&quot;</defaultValue>
        <label>Account Email Field</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cnotify__Custom_Sms_Class_Name__c</fullName>
        <label>Custom Sms Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Package_Namespace__c</fullName>
        <defaultValue>&quot;loan&quot;</defaultValue>
        <label>Package Namespace</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Sms_Limt__c</fullName>
        <label>Sms Limt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Use_Custom_Sms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to use Twilio or Custom Sms</description>
        <label>Use Custom Sms</label>
        <type>Checkbox</type>
    </fields>
    <label>Notify Settings</label>
</CustomObject>